# eplugin-tasque

./: AUTHORS  ChangeLog  README  autogen.sh  configure.in
src/: Makefile.am  org-gnome-evolution-tasque.eplug.xml  tasque.c
